[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-unison"
version = "0.1.0"
description = "LangChain integration for the Unison Brain — memory, chat history, and retriever"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Unison Labs", email = "mishanefedov2002@gmail.com" }]
requires-python = ">=3.9"
keywords = [
    "langchain",
    "memory",
    "retriever",
    "ai-agents",
    "llm",
    "knowledge-graph",
    "unison",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://unisonlabs.ai"
Repository = "https://github.com/unison-labs-ai/langchain-unison"
"Bug Tracker" = "https://github.com/unison-labs-ai/langchain-unison/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_unison"]

[tool.hatch.build.targets.sdist]
include = [
    "langchain_unison/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
